@@ -18,20 +18,14 @@ package org.apache.solr.response;
 
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
-import java.io.IOException;
-import java.nio.ByteBuffer;
 import java.util.Locale;
 import java.util.Map;
 import java.util.UUID;
-import org.apache.lucene.document.StoredField;
-import org.apache.lucene.document.TextField;
 import org.apache.lucene.util.BytesRef;
 import org.apache.solr.SolrTestCaseJ4;
-import org.apache.solr.cli.SimplePostTool;
 import org.apache.solr.common.SolrDocument;
 import org.apache.solr.common.SolrDocumentList;
 import org.apache.solr.common.params.CommonParams;
-import org.apache.solr.common.util.ByteArrayUtf8CharSequence;
 import org.apache.solr.common.util.ByteUtils;
 import org.apache.solr.common.util.JavaBinCodec;
 import org.apache.solr.common.util.NamedList;
@@ -59,28 +53,6 @@ public class TestBinaryResponseWriter extends SolrTestCaseJ4 {
     compareStringFormat("Thailand (ประเทศไทย)");
     compareStringFormat(
         "LIVE: सबरीमाला मंदिर के पास पहुंची दो महिलाएं, जमकर हो रहा विरोध-प्रदर्शन");
-  }
-
-  public void testJavabinCodecWithCharSeq() throws IOException {
-    SolrDocument document = new SolrDocument();
-    document.put("id", "1");
-    String text = "नए लुक में धमाल मचाने आ रहे हैं MS Dhoni, कुछ यूं दिखाया हेलीकॉप्टर शॉट";
-    document.put(
-        "desc",
-        new StoredField("desc", new ByteArrayUtf8CharSequence(text) {}, TextField.TYPE_STORED));
-
-    NamedList<Object> nl = new NamedList<>();
-    nl.add("doc1", document);
-    SimplePostTool.BAOS baos = new SimplePostTool.BAOS();
-    new JavaBinCodec(new BinaryResponseWriter.Resolver(null, null)).marshal(nl, baos);
-    ByteBuffer byteBuffer = baos.getByteBuffer();
-    NamedList<?> result =
-        (NamedList<?>)
-            new JavaBinCodec()
-                .unmarshal(
-                    new ByteArrayInputStream(
-                        byteBuffer.array(), byteBuffer.arrayOffset(), byteBuffer.limit()));
-    assertEquals(text, result._get("doc1/desc", null));
   }
 
   private void compareStringFormat(String input) {
